--- a/ch1/anchors.html
+++ b/ch1/anchors.html
@@ -6,6 +6,7 @@
     <title>Links App</title>
 </head>
 <body>
+    <!-- These are comments -->
     <a href="https://codingfactory.aueb.gr/" target="_blank">Visit Us</a>
     <br>
     <br> 
@@ -17,5 +18,10 @@
     <hr>
 
     <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements" target="_blank">MDN HTML Elements</a>
+
+    <br>
+    <a href="https://unsplash.com/s/photos/art">
+        <img src="../img/art1.jpg" alt="art1 image" width="250" height="auto">
+    </a>
 </body>
 </html>
