--- a/ch2/example10-list-menu.html
+++ b/ch2/example10-list-menu.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="../img/Logo1.png" alt="AUEB Logo">
+            <img class="aueb-img" src="../img/Logo1.png" alt="AUEB Logo">
             <div class="nav">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -22,5 +22,19 @@
 
     </div>
     
+    <div class="container mt-5">
+        <header>
+            <img class="aueb-img" src="../img/Logo1.png" alt="AUEB Logo">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">We Educate</a></li>
+                    <li><a href="#">We Innovate</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </nav>
+        </header>
+
+    </div>
 </body>
 </html>
