--- a/ch5-bootstrap/example2.html
+++ b/ch5-bootstrap/example2.html
@@ -9,11 +9,11 @@
   <body>
 
     <div class="bg-warning p-5 m-3 border border-primary border-5 rounded-5">
-        <h1>Hello, Coding Factory</h1>
-        <p>This is a bootstrap paragraph</p>
-        <hr>
+        <h1 class="display-4">Hello, Coding Factory</h1>
+        <p class="lead">This is a bootstrap paragraph</p>
+        <hr class="my-5">
         <p>Another bootstrap paragraph</p>
-        <a href="">Learn more</a>
+        <a class="btn btn-primary btn-lg" role="button" href="http://www.aueb.gr" target="_blank">Learn more</a>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
